# karaoke-lyrics-processor

./: convert_to_utf8.py  pyproject.toml  tool.poetry
karaoke_lyrics_processor/: karaoke_lyrics_processor.py
